# auth-service

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose-test.yml  docker-compose.yml
migrations/2023-09-30-163131_alter_users/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/db/: mod.rs
src/handlers/: mod.rs  signup.rs
src/handlers/getbyid/: mod.rs
src/handlers/signup/: mod.rs
src/handlers/update/: mod.rs
src/log/: mod.rs
src/models/: mod.rs
src/services/: mod.rs
src/services/user/: mod.rs
