[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
diesel_migrations = "2.1.0"
r2d2 = "0.8.10"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.8.0"
